CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(BouncingBallsSolver CXX)

ENABLE_LANGUAGE(CXX)
SET(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")

FIND_PACKAGE(X11 REQUIRED)
find_package(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${X11_INCLUDE_DIRS}
    ${OpenCV_INCLUDE_DIRS}
    ${PROJECT_SOURCE_DIR}/src
    )

include_directories(${PROJECT_SOURCE_DIR}/src)

FOREACH(MODULE
        src
        )

    FILE(GLOB MODULES_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/${MODULE}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/${MODULE}/*.h ${CMAKE_CURRENT_SOURCE_DIR}/${MODULE}/*.inl ${CMAKE_CURRENT_SOURCE_DIR}/${MODULE}/*.c)
    SET(SOURCES ${MODULES_SOURCES} ${SOURCES})
ENDFOREACH(MODULE)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${X11_LIBRARIES} ${OpenCV_LIBS} )
