CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(BouncingBallsSolver)

FIND_PACKAGE(X11 REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)

ENABLE_LANGUAGE(CXX)
SET(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")

INCLUDE_DIRECTORIES(
    ${X11_INCLUDE_DIRS}
    ${OpenCV_INCLUDE_DIRS}
    ${PROJECT_SOURCE_DIR}/src
    )

FOREACH(MODULE
        src
        )

    FILE(GLOB MODULES_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/${MODULE}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/${MODULE}/*.h ${CMAKE_CURRENT_SOURCE_DIR}/${MODULE}/*.inl)
    SET(SOURCES ${MODULES_SOURCES} ${SOURCES})
ENDFOREACH(MODULE)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${X11_LIBRARIES} ${OpenCV_LIBS} )

